--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/gti-sos/SOS2526-15/issues"
   },
-  "homepage": "https://github.com/gti-sos/SOS2526-15#readme"
+  "homepage": "https://github.com/gti-sos/SOS2526-15#readme",
+  "dependencies": {
+    "cool-ascii-faces": "^1.3.4"
+  }
 }
