--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/gti-sos/SOS2526-15#readme",
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "xlsx": "^0.18.5"
   }
 }
